fix: 'manager' not synchronized with login status fix: The mobile sidebar 'operation' and 'routes' overlap

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -28,13 +28,6 @@ body {
   height: 5px;
 }
 
-@media (max-width: 1024px) {
-  ::-webkit-scrollbar {
-    width: 3px;
-    height: 3px;
-  }
-}
-
 ::-webkit-scrollbar-thumb {
   border-radius: 3px;
   background-color: var(--dark-gray);
@@ -43,6 +36,17 @@ body {
 ::-webkit-scrollbar-corner {
   width: 0;
   height: 0;
+}
+
+@media (max-width: 1024px) {
+  ::-webkit-scrollbar {
+    width: 3px;
+    height: 3px;
+  }
+
+  * {
+    -webkit-tap-highlight-color: transparent;
+  }
 }
 
 @keyframes flipInX {
